fix alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .mainApp {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #dddbf1;
     padding: 5%;
     border-radius: 5px;
